# pico_scpi_usbtmc_labtool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  dbuild.sh  lbuild.sh  memmap_custom.ld  usbtmc_device.patch
.github/workflows/: Dockerfile
source/: main.c
source/adc/: adc_utils.c  adc_utils.h
source/adc16/: adc16_utils.c  adc16_utils.h
source/gpio/: gpio_utils.c  gpio_utils.h
source/i2c/: i2c_utils.c  i2c_utils.h
source/pwm/: pwm.h  pwm_utils.c  pwm_utils.h
source/scpi/: scpi-def.c  scpi-def.h  scpi_user_config.h
source/scpi/registers/: registers.c  registers.h
source/usb/: usb_descriptors.c  usbtmc_app.c  usbtmc_app.h  usbtmc_device_custom.c  usbtmc_device_custom.h
test/: visaQuery.py
